<resources>
    <string name="app_name">Vegeshop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Ware_image_descr">Ware image</string>
    <string name="nav_header_exit">Выход</string>
    <string name="Wares">Товары</string>
    <string name="btn_calc_add">Добавить</string>
    <string name="btn_calc_cancel">Отменить</string>
    <string name="calc_template">%s ₽ / %s КГ</string>
    <string name="order_num_template">#%d</string>
    <string name="sum_template">%s ₽</string>
    <string name="price_template">1 КГ Х %s ₽</string>
    <string name="calc_template_bi">%s КГ Х %s ₽</string>
</resources>
