<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvWareName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        tools:text="Ware name"/>

    <TextView
        android:id="@+id/tvCalculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvWareName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvWareName"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginStart="16dp"
        android:text="@string/calc_template"/>

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWareName"
        android:layout_marginTop="8dp"
        tools:text="12 КГ"
        android:gravity="end"
        android:textColor="@color/blackFF"/>

    <View
        android:id="@+id/vAmountLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tvAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"
        android:background="@color/colorAccent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vAmountLine"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        tools:listitem="@layout/rvi_calc_btn"
        tools:itemCount="12"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rvButtons"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/btn_calc_add"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/btnAdd"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="1"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/btn_calc_cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>